# gode

./: README.md  pyproject.toml
src/gode/: __init__.py  cli.py  models.py  orchestrator.py  registry.py
tests/: test_orchestrator.py  test_registry.py
