[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "gode"
version = "0.1.0"
description = "Terminal-first R&D sandbox for multi-agent coding orchestration."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.7,<3",
  "rich>=13.7,<14",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1,<9",
  "ruff>=0.4,<1",
]

[project.scripts]
gode = "gode.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gode"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
